--- a/Inmobiliaria/src/main/resources/templates/00-index.html
+++ b/Inmobiliaria/src/main/resources/templates/00-index.html
@@ -15,6 +15,7 @@
   </head>
   <body style="margin: 30px;">
     <header>
+      <!--<div th:replace="fragments/navbar.html :: navbar"></div>-->
       <nav>
         <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
         <div class="row" style="width: 100%">
