--- a/Inmobiliaria/src/main/resources/templates/02-registroUsuario.html
+++ b/Inmobiliaria/src/main/resources/templates/02-registroUsuario.html
@@ -1,146 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body style="margin: 30px;">
-    <header>
-      <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
-    </header>
-    <br>
-    <h1>Registro de Propietario</h1><br>
-<section>
-  <form action="00-index.html" class="formaction">
-              <div class="row">
-                    <div class="col"></div>
-                    <div class="col">
-                      <label for="nombre">Nombre</label><br>
-                      <input type="nombre" name="nombre" id="nombre" / required><br>
-                    </div>
-                    
-                    <div class="col">
-                      <label for="apellido">Apellido</label><br>
-                      <input type="text" name="apellido" id="apellido" / required><br>
-                    </div>
-                    <div class="col"></div>
-              </div>
-              <div class="row">
-                <div class="col"></div>
-                <div class="col">
-                  <label for="email">E-mail</label><br>
-                  <input type="email" name="email" id="email" / required><br>
-                </div>
-                
-                <div class="col">
-                  <label for="password">Password</label><br>
-                  <input type="password" name="password" id="password" / required><br>
-                </div>
-                <div class="col"></div>
-          </div>
-         <div class="row">
-          <div class="col"></div>
-          <div class="col">
-            <label for="tipo de usuario">registrarme como: </label><br>
-            <select name="tipo de usuario" id="tipo de usuario" class="form-select" id="tipo" required>tipo de usuario
-              <option value="1"></option>
-              <option value="2">Propietario: Quiero publicar mi propiedad </option>
-              <option value="3">No propietario: Quiero alquilar o comprar una propiedad </option>
-            </select>
-          </div>
-          <div class="col"><br>
-           
-            <input type="submit" formaction="index.html" name="" id="submit">
-          </div>
-          <div class="col"></div>
-         </div> 
-  
-  </form>
- 
-</section>
-<br><br>
-  <hr>
-    <footer>
-      <div class="row">
-        <div class="col-md-5">
-          <div class="row">
-            <div class="col" style="text-align-last: justify">
-              <a href="https://es-la.facebook.com/">
-                <img
-                  src="img/face.png"
-                  alt=""
-                  style="width: 40px; height: auto"
-              /></a>
-              <a href="https://www.instagram.com/?hl=es"
-                ><img
-                  src="img/instagran.png"
-                  alt=""
-                  style="width: 40px; height: auto"
-              /></a>
-              <a href="https://twitter.com/?lang=es"
-                ><img
-                  src="img/twiter.png"
-                  alt=""
-                  style="width: 60px; height: auto"
-              /></a>
-              <a href="https://www.tiktok.com/es//"
-                ><img
-                  src="img/tiktok.jfif"
-                  alt=""
-                  style="width: 60px; height: auto"
-              /></a>
-            </div>
-          </div>
-          <br />
-          <div class="row">
-            <h3 style="text-align: center">Donde estamos</h3>
-            <p style="text-align: center">
-              making it look like readable English. Many desktop publishing
-              packages and web page editors now use Lorem Ipsum as their
-            </p>
-          </div>
-        </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-6">
-          <form action="">
-            <input
-              type="text"
-              name="Nombre"
-              placeholder="Ingrese su nombre"
-              id="nombre"
-            />
-            <label for="email"></label>
-            <input type="email" placeholder="Ingrese su E-Mail" /><br />
-            <label for="comentarios"></label><br />
-            <textarea
-              name=""
-              id="comentarios"
-              placeholder=" Escribanos y nos contactaremos de inmediato "
-              class="commentA"
-              style="width: 100%; min-height: 100px"
-            ></textarea>
-            <label for="Enviar"></label>
-            <input type="submit" />
-          </form>
-        </div>
-      </div>
-    </footer>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
+
+<body style="margin: 30px;">
+	<header>
+		<a href="00-index.html"><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+	</header>
+	<br>
+	<h1>Registro de Propietario</h1><br>
+	<section>
+		<form th:action="@{/inicio}" class="formaction">
+			<div class="row">
+				<div class="coal"></div>
+				<div class="col">
+					<label for="nombre">Nombre</label><br>
+					<input type="nombre" name="nombre" id="nombre" / required><br>
+				</div>
+
+				<div class="col">
+					<label for="apellido">Apellido</label><br>
+					<input type="text" name="apellido" id="apellido" / required><br>
+				</div>
+				<div class="col"></div>
+			</div>
+			<div class="row">
+				<div class="col"></div>
+				<div class="col">
+					<label for="email">E-mail</label><br>
+					<input type="email" name="email" id="email" / required><br>
+				</div>
+
+				<div class="col">
+					<label for="password">Password</label><br>
+					<input type="password" name="password" id="password" / required><br>
+				</div>
+				<div class="col"></div>
+			</div>
+			<div class="row">
+				<div class="col"></div>
+				<div class="col">
+					<label for="tipo de usuario">registrarme como: </label><br>
+					<select name="tipo de usuario" id="tipo de usuario" class="form-select" id="tipo" required>tipo de
+						usuario
+						<option value="1"></option>
+						<option value="2">Propietario: Quiero publicar mi propiedad </option>
+						<option value="3">No propietario: Quiero alquilar o comprar una propiedad </option>
+					</select>
+				</div>
+				<div class="col"><br>
+
+					<input type="submit" formaction="index.html" name="" id="submit">
+				</div>
+				<div class="col"></div>
+			</div>
+
+		</form>
+
+	</section>
+	<br><br>
+	<hr>
+	<footer>
+		<div class="row">
+			<div class="col-md-5">
+				<div class="row">
+					<div class="col" style="text-align-last: justify">
+						<a href="https://es-la.facebook.com/">
+							<img src="img/face.png" alt="" style="width: 40px; height: auto" /></a>
+						<a href="https://www.instagram.com/?hl=es"><img src="img/instagran.png" alt=""
+								style="width: 40px; height: auto" /></a>
+						<a href="https://twitter.com/?lang=es"><img src="img/twiter.png" alt=""
+								style="width: 60px; height: auto" /></a>
+						<a href="https://www.tiktok.com/es//"><img src="img/tiktok.jfif" alt=""
+								style="width: 60px; height: auto" /></a>
+					</div>
+				</div>
+				<br />
+				<div class="row">
+					<h3 style="text-align: center">Donde estamos</h3>
+					<p style="text-align: center">
+						making it look like readable English. Many desktop publishing
+						packages and web page editors now use Lorem Ipsum as their
+					</p>
+				</div>
+			</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-6">
+				<form action="">
+					<input type="text" name="Nombre" placeholder="Ingrese su nombre" id="nombre" />
+					<label for="email"></label>
+					<input type="email" placeholder="Ingrese su E-Mail" /><br />
+					<label for="comentarios"></label><br />
+					<textarea name="" id="comentarios" placeholder=" Escribanos y nos contactaremos de inmediato "
+						class="commentA" style="width: 100%; min-height: 100px"></textarea>
+					<label for="Enviar"></label>
+					<input type="submit" />
+				</form>
+			</div>
+		</div>
+	</footer>
 
 
-    
-    
 
-      
 
-   <!-- <div class="col-md-6">
+
+
+
+	<!-- <div class="col-md-6">
       
       <form action="">
         <label for="Nombre">Ingrese su nombre</label><br>
@@ -203,5 +176,6 @@
       <label for="submit">Ingrese enviar para completar el registro</label><br>
       <input type="submit" formaction="registroPropiedad.html" name="" id="submit" /><br>
     </form>-->
-  </body>
+</body>
+
 </html>
