--- a/Inmobiliaria/src/main/resources/templates/06-inquilino.html
+++ b/Inmobiliaria/src/main/resources/templates/06-inquilino.html
@@ -65,7 +65,7 @@
     </header>
     <section>
         <h1>Bienvenido</h1>
-        <h2> "Aca iria la info del inquilino"</h2>
+        <h2 th:action=@{/inquilino/encontrar} th:text=${inquilino.nombre}> </h2>
     </section>
     <hr />
 
