--- a/Inmobiliaria/src/main/resources/templates/00-index.html
+++ b/Inmobiliaria/src/main/resources/templates/00-index.html
@@ -17,7 +17,7 @@
     <header>
       <!--<div th:replace="fragments/navbar.html :: navbar"></div>-->
       <nav>
-        <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+        <a th:href="@{}" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
         <div class="row" style="width: 100%">
           <div class="col" style="text-align: center;">            
             
