--- a/Inmobiliaria/src/main/resources/templates/01-quienesSomos.html
+++ b/Inmobiliaria/src/main/resources/templates/01-quienesSomos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 </head>
 <body style="margin: 30px;">
     <header>
-        <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+        <a th:href="@{}" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
         <nav>
           <div class="row" style="width: 100%">
             <div class="col" style="text-align: center;">
