--- a/Inmobiliaria/src/main/resources/templates/02-registroUsuario.html
+++ b/Inmobiliaria/src/main/resources/templates/02-registroUsuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
 	<meta charset="UTF-8" />
@@ -12,7 +12,7 @@
 
 <body style="margin: 30px;">
 	<header>
-		<a href="00-index.html"><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+		<a th:href="@{}"><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
 	</header>
 	<br>
 	<h1>Registro de Propietario</h1><br>
