--- a/Inmobiliaria/src/main/resources/templates/06-inquilino.html
+++ b/Inmobiliaria/src/main/resources/templates/06-inquilino.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    <title>Inquilino</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  />
+    crossorigin="anonymous"/>
 
 </head>
 <body style="margin: 30px;">
     <header>
         <nav>
-            <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+            <a th:href="@{/}" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
             <nav>
               <div class="row" style="width: 100%">
                 <div class="col" style="text-align: center;">
@@ -65,7 +63,7 @@
     </header>
     <section>
         <h1>Bienvenido</h1>
-        <h2 th:action=@{/inquilino/encontrar} th:text=${inquilino.nombre}> </h2>
+        <h2 > </h2>
     </section>
     <hr />
 
