--- a/Inmobiliaria/src/main/resources/templates/02-registroUsuario.html
+++ b/Inmobiliaria/src/main/resources/templates/02-registroUsuario.html
@@ -15,7 +15,7 @@
 		<a th:href="@{}"><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
 	</header>
 	<br>
-	<h1>Registro de Propietario</h1><br>
+	<h1>Registro de Usuario</h1><br>
 	<section>
 		<form th:action="@{/usuario/crearUsuario}" class="formaction" method="POST">
 			<div class="row">
