--- a/Inmobiliaria/src/main/resources/templates/04-login.html
+++ b/Inmobiliaria/src/main/resources/templates/04-login.html
@@ -1,116 +1,89 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <title>Document</title>
 </head>
 
 <body style="margin: 30px;">
-    <header>
-        <a th:href="@{}" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
-    </header>
-    <br>
-   <div class="row">
-       <div class="col-md-3"></div>
-       <div class="col-md-6">
-        <form action="" class="formaction" >
-            <input type="email" name="E-Mail" id="" placeholder="Ingrese su Email" required>
-            <input type="password" name="" id="" placeholder="Ingrese su contraseña" required>
-            <input type="submit" value="Ingresar" formaction="05-propietario.html">
-        </form>
-       </div>
-       <div class="col-md-3"></div>
-
-   </div>
-   <div class="row">
+  <header>
+    <a th:href="@{}"><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+  </header>
+  <br>
+  <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-     <a href="11-recuperoDeContraseña.html">Olvide mi contraseña</a>
+      <form th:action="@{/login}" class="formaction" method="POST">
+        <input type="email" name="email" id="" placeholder="Ingrese su Email" required>
+        <input type="password" name="contrasenia" id="" placeholder="Ingrese su contraseña" required>
+        <input type="submit" value="Ingresar">
+      </form>
     </div>
     <div class="col-md-3"></div>
 
-</div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <a href="11-recuperoDeContraseña.html">Olvide mi contraseña</a>
+    </div>
+    <div class="col-md-3"></div>
+
+  </div>
 
 
 
 
-    <br><br><br><br><br><br><br>
-   <hr>
+  <br><br><br><br><br><br><br>
+  <hr>
 
 
 
-    <footer>
+  <footer>
+    <div class="row">
+      <div class="col-md-5">
         <div class="row">
-          <div class="col-md-5">
-            <div class="row">
-              <div class="col" style="text-align-last: justify">
-                <a href="https://es-la.facebook.com/">
-                  <img
-                    src="img/face.png"
-                    alt=""
-                    style="width: 40px; height: auto"
-                /></a>
-                <a href="https://www.instagram.com/?hl=es"
-                  ><img
-                    src="img/instagran.png"
-                    alt=""
-                    style="width: 40px; height: auto"
-                /></a>
-                <a href="https://twitter.com/?lang=es"
-                  ><img
-                    src="img/twiter.png"
-                    alt=""
-                    style="width: 60px; height: auto"
-                /></a>
-                <a href="https://www.tiktok.com/es//"
-                  ><img
-                    src="img/tiktok.jfif"
-                    alt=""
-                    style="width: 60px; height: auto"
-                /></a>
-              </div>
-            </div>
-            <br />
-            <div class="row">
-              <h3 style="text-align: center">Donde estamos</h3>
-              <p style="text-align: center">
-                making it look like readable English. Many desktop publishing
-                packages and web page editors now use Lorem Ipsum as their
-              </p>
-            </div>
-          </div>
-          <div class="col-md-1"></div>
-          <div class="col-md-6">
-            <form action="">
-              <input
-                type="text"
-                name="Nombre"
-                placeholder="Ingrese su nombre"
-                id="nombre"
-              />
-              <label for="email"></label>
-              <input type="email" placeholder="Ingrese su E-Mail" /><br />
-              <label for="comentarios"></label><br />
-              <textarea name=""
-                id="comentarios"
-                placeholder=" Escribanos y nos contactaremos de inmediato "
-                class="commentA"
-                style="width: 100%; min-height: 100px"
-              ></textarea>
-              <label for="Enviar"></label>
-              <input type="submit" />
-            </form>
+          <div class="col" style="text-align-last: justify">
+            <a href="https://es-la.facebook.com/">
+              <img src="img/face.png" alt="" style="width: 40px; height: auto" /></a>
+            <a href="https://www.instagram.com/?hl=es"><img src="img/instagran.png" alt=""
+                style="width: 40px; height: auto" /></a>
+            <a href="https://twitter.com/?lang=es"><img src="img/twiter.png" alt=""
+                style="width: 60px; height: auto" /></a>
+            <a href="https://www.tiktok.com/es//"><img src="img/tiktok.jfif" alt=""
+                style="width: 60px; height: auto" /></a>
           </div>
         </div>
-      </footer>
-    
+        <br />
+        <div class="row">
+          <h3 style="text-align: center">Donde estamos</h3>
+          <p style="text-align: center">
+            making it look like readable English. Many desktop publishing
+            packages and web page editors now use Lorem Ipsum as their
+          </p>
+        </div>
+      </div>
+      <div class="col-md-1"></div>
+      <div class="col-md-6">
+        <form action="">
+          <input type="text" name="Nombre" placeholder="Ingrese su nombre" id="nombre" />
+          <label for="email"></label>
+          <input type="email" placeholder="Ingrese su E-Mail" /><br />
+          <label for="comentarios"></label><br />
+          <textarea name="" id="comentarios" placeholder=" Escribanos y nos contactaremos de inmediato "
+            class="commentA" style="width: 100%; min-height: 100px"></textarea>
+          <label for="Enviar"></label>
+          <input type="submit" />
+        </form>
+      </div>
+    </div>
+  </footer>
+
 </body>
+
 </html>
