--- a/Inmobiliaria/src/main/resources/templates/07-registroPropiedad.html
+++ b/Inmobiliaria/src/main/resources/templates/07-registroPropiedad.html
@@ -20,7 +20,7 @@
       <h1>Registro de propiedad</h1>
       <br>
       
-<form action="" method="post" class="col-md-12">
+<form th:action="@{/propiedad}" method="post" class="col-md-12" >
     <div class="row">
         <div class="col-md-6">
             <label for="tipo">Tipo de operación</label><br>
