--- a/Inmobiliaria/src/main/resources/templates/00-index.html
+++ b/Inmobiliaria/src/main/resources/templates/00-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>index</title>
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -15,12 +15,12 @@
   </head>
   <body style="margin: 30px;">
     <header>
-      <div th:replace="fragments/navbar.html :: nav_bar"></div>
-      <div th:replace="fragments/buscador.html :: nav_buscador"></div>
+      <div th:replace="fragments/navbar :: nav_bar"></div>
+      <div th:replace="fragments/buscador :: nav_buscador"></div>
      
     </header>
     <br/> <br/>
-    <container>
+    <a th:href="@{/usuario/registro}" style="padding: 5px"> ¿Sos Propietario? registrate</a>
     <section style="background-color: rgb(158, 248, 170);">
       <div class="container"><br>
         <div class="row">
@@ -35,7 +35,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="img/casa3.png" class="img-fluid" alt="" />
+            <img src="img/casa3.png" class="img-fluid" alt="imagen rota" />
             <h3 style="text-align: center">esta es una casa</h3>
             <p style="text-align: justify">
               There are many variations of passages of Lorem Ipsum available,
@@ -45,7 +45,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="img/casa4.png" class="img-fluid" alt="" />
+            <img src="img/casa4.png" class="img-fluid" alt="imagen rota" />
             <h3 style="text-align: center">esta es una casa</h3>
             <p style="text-align: justify">
               There are many variations of passages of Lorem Ipsum available,
@@ -58,12 +58,12 @@
       </div>
       <br /><br />
     </section>
-  </container>
+  
     <hr />
 
     <div th:replace="fragments/footer.html :: footer"></div>
 
-  
+  <script src=""></script>
   </body>
 </html>
-<script src=""></script>
+
