--- a/Inmobiliaria/src/main/resources/templates/00-index.html
+++ b/Inmobiliaria/src/main/resources/templates/00-index.html
@@ -16,11 +16,12 @@
   <body style="margin: 30px;">
     <header>
       <div th:replace="fragments/navbar :: nav_bar"></div>
+      <br><br>
       <div th:replace="fragments/buscador :: nav_buscador"></div>
      
     </header>
-    <br/> <br/>
-    <a th:href="@{/usuario/registro}" style="padding: 5px"> ¿Sos Propietario? registrate</a>
+    <br><br>
+  
     <section style="background-color: rgb(158, 248, 170);">
       <div class="container"><br>
         <div class="row">
@@ -45,7 +46,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="img/casa4.png" class="img-fluid" alt="imagen rota" />
+            <img src="img/casa6.jpg" class="img-fluid" alt="imagen rota" />
             <h3 style="text-align: center">esta es una casa</h3>
             <p style="text-align: justify">
               There are many variations of passages of Lorem Ipsum available,
