--- a/Inmobiliaria/src/main/resources/templates/10-NuestrosServicios.html
+++ b/Inmobiliaria/src/main/resources/templates/10-NuestrosServicios.html
@@ -24,10 +24,10 @@
 
         <div class="row">
             <div class="col-md-6">
-               <h2> <a href="02-registroUsuario.html" style="color: indianred;">¿Sos Propietario? registrate</a> </h2>   
+               <h2> <a th:href="@{/usuario/registroP}" style="color: indianred;">¿Sos Propietario? registrate</a> </h2>   
             </div>
             <div class="col-md-6">
-                <h2> <a href="02-registroUsuario.html"style="color: indianred;">¿Queres comprar o alquilar?</a>  </h2>
+                <h2> <a th:href="@{/usuario/registroI}"style="color: indianred;">¿Queres comprar o alquilar?</a>  </h2>
             </div>
 
         </div>
