cambios de luis

--- a/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
+++ b/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
@@ -27,7 +27,7 @@
 	<h1>Registro de Usuario PROPIETARIO</h1>
 	<br>
 	<section>
-		<form action="" class="formaction" method="POST">
+		<form th:action="@{/propietario/crear}" class="formaction" method="POST">
 			<div class="row">
 				<div class="col"></div>
 				<div class="col">
