--- a/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
+++ b/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
@@ -51,14 +51,27 @@
 
 				<div class="col">
 					<label for="password">Password</label><br> <input
-						type="password" name="password" id="password" required><br>
+						type="password" name="contrasenia" id="contrasenia" required><br>
+				</div>
+				<div class="col"></div>
+			</div>
+			<div class="row">
+				<div class="col"></div>
+				<div class="col">
+					<label for="Dni">Dni</label><br> <input type="text"
+						name="dni" id="dni" required><br>
+				</div>
+
+				<div class="col">
+					<label for="Direccion">Direccion</label><br> <input
+						type="text" name="direccion" id="direccion" required><br>
 				</div>
 				<div class="col"></div>
 			</div><br>
 			<div class="row">
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
-					<input type="submit" formaction="index.html" name="" id="submit">
+					<input type="submit" name="" id="submit">
 				</div>
 				<div class="col-md-2"></div>
 			</div>
