--- a/Inmobiliaria/src/main/resources/templates/04-login.html
+++ b/Inmobiliaria/src/main/resources/templates/04-login.html
@@ -22,7 +22,7 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <form action="" class="formaction" method="POST">
-        <input type="email" name="email" id="" placeholder="Ingrese su Email" required>
+        <input type="text" name="dni" id="" placeholder="Ingrese su Dni" required>
         <input type="password" name="contrasenia" id="" placeholder="Ingrese su contraseña" required>
         <input type="submit" value="Ingresar">
       </form>
