--- a/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
+++ b/Inmobiliaria/src/main/resources/templates/02A-registroUsuarioP.html
@@ -22,6 +22,8 @@
           
     
 </header>
+
+	<p th:if="${error != null}" th:text="${error}" style="color:red;"></p>
 	
 	<br>
 	<h1>Registro de Usuario PROPIETARIO</h1>
