--- a/Inmobiliaria/src/main/resources/templates/04-login.html
+++ b/Inmobiliaria/src/main/resources/templates/04-login.html
@@ -16,7 +16,18 @@
 		      <div th:replace="fragments/navbar.html :: nav_bar"></div>
 		      <div th:replace="fragments/buscador.html :: nav_buscador"></div>
    </header><br>
-  
+  <div th:if="${exito}!=null" class="card text-white bg-success mb-3">
+				<div class="card-body">
+					<h5 class="card-title">Exito</h5>
+					<p class="card-text" th:text="${exito}"></p>
+				</div>
+			</div>
+			<div th:if="${error}!=null" class="card text-white bg-danger mb-3">
+				<div class="card-body">
+					<h5 class="card-title">Error</h5>
+					<p class="card-text" th:text="${error}"></p>
+				</div>
+			</div>
   <br>
   <div class="row">
     <div class="col-md-3"></div>
