--- a/Inmobiliaria/src/main/resources/templates/02-registroUsuarioI.html
+++ b/Inmobiliaria/src/main/resources/templates/02-registroUsuarioI.html
@@ -25,7 +25,7 @@
 	<h1>Registro de Usuario INQUILINO</h1>
 	<br>
 	<section>
-		<form action="" class="formaction" method="POST">
+		<form th:action="@{/inquilino/crear}" class="formaction" method="POST">
 			<div class="row">
 				<div class="col"></div>
 				<div class="col">
@@ -50,6 +50,12 @@
 						required><br>
 				</div>
 				<div class="col"></div>
+			</div>
+			<div class="row">
+				<div class="col"></div>
+				<div class="col">
+					<label for="Dni">Dni</label><br> <input type="text" name="dni" id="dni" required><br>
+				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-2"></div>
@@ -171,6 +177,3 @@
       <label for="submit">Ingrese enviar para completar el registro</label><br>
       <input type="submit" formaction="registroPropiedad.html" name="" id="submit" /><br>
     </form>-->
-</body>
-
-</html>
