--- a/bin/Inmobiliaria/src/main/resources/templates/01-quienesSomos.html
+++ b/bin/Inmobiliaria/src/main/resources/templates/01-quienesSomos.html
@@ -1,60 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
+
 <body style="margin: 30px;">
-    <header>
-        <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
-        <nav>
-          <div class="row" style="width: 100%">
-            <div class="col" style="text-align: center;">
-              <a href="02-registroUsuario.html" style="padding: 5px">¿Sos Propietario? registrate</a>
-              <a href="02-registroUsuario.html" style="padding: 5px">¿Queres comprar o alquilar?</a>
-              <a href="01-quienesSomos.html" style="padding: 5px">Nosotros</a>
-              <a href="10-NuestrosServicios.html" style="padding: 5px">Nuestros Servicios</a>
-              <a href="04-login.html" style="padding: 5px">Usuario Registrado</a>
-            </div>
-            
-          </div>
-        </nav><br><br>
-        <nav><br>
-            <form action="08-respuestaBusqueda.html" class="formaction" style="width: 100%; text-align: center; 
-            border-style: solid; border-color: #E6E6FA; padding: 5px;">
-              <div class="row">
-                  <div class="col-md-3">
-                      <label for="busqueda">Buscar</label>
-                      <input type="search" id="busqueda" placeholder="Buscar por zona"/>
-                  </div>
-                  <div class="col-md-3">
-                      <label for="Tipo Prop">Tipo de Propiedad</label>
-                      <select name="" id="propiedad" >
-                        <option value=""></option>
-                        <option value="Casa">Casa</option>
-                        <option value="Departamento">Departamento</option>
-                        <option value="Local Comercial">Local Comercial</option>
-                      </select>
-                  </div>
-                  <div class="col-md-3">
-                      <label for="tipo de operacion">Tipo de operacion</label>
-                      <select name="tipo de operacion" id="operacion">
-                        <option value="Alquiler">Alquiler</option>
-                        <option value="Venta">Venta</option>
-                        <option value="Alq/venta">Alquiler o venta</option>
-                      </select>
-                  </div>
-                  <div class="col-md-3">
-                        <input type="submit"  value="buscar" />
-                  </div>
-                </div>
-            </form>
-         
-          </nav>
+        <header>
+		      <div th:replace="fragments/navbar.html :: nav_bar"></div>
+		      <div th:replace="fragments/buscador.html :: nav_buscador"></div>
     </header><br>
     <section>
         <h1>
@@ -66,84 +24,17 @@
     </section>
     <div class="row">
         <div class="col-md-6">
-           <h2> <a href="02-registroUsuario.html" style="color: indianred;">¿Sos Propietario? registrate</a> </h2>   
+           <h2> <a th:href="@{/usuario/registroP}" style="color: indianred;">¿Sos Propietario? registrate</a> </h2>   
         </div>
         <div class="col-md-6">
-            <h2> <a href="02-registroUsuario.html"style="color: indianred;">¿Queres comprar o alquilar?</a>  </h2>
+            <h2> <a th:href="@{/usuario/registroI}" style="color: indianred;">¿Queres comprar o alquilar?</a>  </h2>
         </div>
 
     </div>
     <br><br><br><br><br><br><br>
     <hr>
-    
 
-    <footer>
-        <div class="row">
-          <div class="col-md-5">
-            <div class="row">
-              <div class="col" style="text-align-last: justify">
-                <a href="https://es-la.facebook.com/">
-                  <img
-                    src="img/face.png"
-                    alt=""
-                    style="width: 40px; height: auto"
-                /></a>
-                <a href="https://www.instagram.com/?hl=es"
-                  ><img
-                    src="img/instagran.png"
-                    alt=""
-                    style="width: 40px; height: auto"
-                /></a>
-                <a href="https://twitter.com/?lang=es"
-                  ><img
-                    src="img/twiter.png"
-                    alt=""
-                    style="width: 60px; height: auto"
-                /></a>
-                <a href="https://www.tiktok.com/es//"
-                  ><img
-                    src="img/tiktok.jfif"
-                    alt=""
-                    style="width: 60px; height: auto"
-                /></a>
-              </div>
-            </div>
-            <br />
-            <div class="row">
-              <h3 style="text-align: center">Donde estamos</h3>
-              <p style="text-align: center">
-                making it look like readable English. Many desktop publishing
-                packages and web page editors now use Lorem Ipsum as their
-              </p>
-            </div>
-          </div>
-          <div class="col-md-1"></div>
-          <div class="col-md-6">
-            <form action="">
-              <input
-                type="text"
-                name="Nombre"
-                placeholder="Ingrese su nombre"
-                id="nombre"
-              />
-              <label for="email"></label>
-              <input type="email" placeholder="Ingrese su E-Mail" /><br />
-              <label for="comentarios"></label><br />
-              <textarea
-                name=""
-                id="comentarios"
-                placeholder=" Escribanos y nos contactaremos de inmediato "
-                class="commentA"
-                style="width: 100%; min-height: 100px"
-              ></textarea>
-              <label for="Enviar"></label>
-              <input type="submit" />
-            </form>
-          </div>
-        </div>
-      </footer>
-      
-
+<div th:replace="fragments/footer.html :: footer"></div>
 
 </body>
 </html>
