--- a/bin/Inmobiliaria/src/main/resources/templates/07-registroPropiedad.html
+++ b/bin/Inmobiliaria/src/main/resources/templates/07-registroPropiedad.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +15,12 @@
 <body style="margin: 30px;">
     <header>
         <header>
-            <a href="00-index.html" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
+            <a th:href="@{}" ><img src="img/logo.png" alt="" style="width: 10%; height: auto;"></a>
         </header>
       <h1>Registro de propiedad</h1>
       <br>
       
-<form action="" method="post" class="col-md-12">
+<form th:action="@{/propiedad}" method="post" class="col-md-12" >
     <div class="row">
         <div class="col-md-6">
             <label for="tipo">Tipo de operación</label><br>
