--- a/Inmobiliaria/src/main/resources/templates/04-login.html
+++ b/Inmobiliaria/src/main/resources/templates/04-login.html
@@ -32,10 +32,10 @@
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-6">
-			<form action="" class="formaction" method="POST">
-				<input type="text" name="dni" id="" placeholder="Ingrese su Dni" required>
-				<input type="password" name="contrasenia" id="" placeholder="Ingrese su contraseña" required>
-				<input type="submit" value="Ingresar">
+			<form action="/logincheck" class="formaction" method="POST">
+				<input type="text" name="username" id="" placeholder="Ingrese su Email" required>
+				<input type="password" name="password" id="" placeholder="Ingrese su contraseña" required>
+				<button type="submit" class="btn btn-primary">Ingresar</button>
 			</form>
 		</div>
 		<div class="col-md-3"></div>
