--- a/Inmobiliaria/src/main/resources/templates/fragments/navbar.html
+++ b/Inmobiliaria/src/main/resources/templates/fragments/navbar.html
@@ -1,14 +1,17 @@
 
 <nav th:fragment="nav_bar">
 		<a th:href="@{/}"><img src="img/logo.png" alt="sin fotooo" style="width: 10%; height: auto;"></a>
+		<div class="row" style="width: 100%">
+		<h3 th:if="${session.usuariosession != null}" th:text="${session.usuariosession.nombre}" style="text-align: center;"></h3>
+		</div>
 			<div class="row" style="width: 100%">
 				<div class="row" style="width: 100%">
 		            <div class="col" style="text-align: center;">
-		              <a th:href="@{/usuario/registroP}" style="padding: 5px"> ¿Sos Propietario? registrate</a>
-		              <a th:href="@{/usuario/registroI}" style="padding: 5px"> ¿Queres comprar o alquilar?</a>
+		              <a th:if="${session.usuariosession == null}" th:href="@{/usuario/registroP}" style="padding: 5px"> Queres registrar tu propiedad ? Entra aca </a>
 		              <a th:href="@{/quienesSomos}" style="padding: 5px"> Nosotros</a>
 		              <a th:href="@{/nuestrosServicios}" style="padding: 5px"> Nuestros Servicios</a>
-		              <a th:href="@{/login}" style="padding: 5px"> Usuario Registrado</a>
+		              <a th:if="${session.usuariosession == null}" th:href="@{/login}" style="padding: 5px"> Ingresa </a>
+		              <a th:if="${session.usuariosession != null}" th:href="@{/logout}" style="padding: 5px"> Logout </a>
 		            </div>
 				</div>
 			</div>
